<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Devices">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devices"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/cardiacDeviceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardiacDevice"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/cardiacDeviceName" />


    <ImageView
        android:id="@+id/addCardiacDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/add"
        app:layout_constraintStart_toEndOf="@id/cardiacDeviceTitle"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="@id/cardiacDeviceTitle"
        app:layout_constraintBottom_toBottomOf="@id/cardiacDeviceTitle"/>


    <TextView
        android:id="@+id/cardiacDeviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/pedalDeviceTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardiacDeviceTitle" />

    <TextView
        android:id="@+id/pedalDeviceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/pedalDevice"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardiacDeviceName" />


    <ImageView
        android:id="@+id/addPedalDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/add"
        app:layout_constraintStart_toEndOf="@id/pedalDeviceTitle"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="@id/pedalDeviceTitle"
        app:layout_constraintBottom_toBottomOf="@id/pedalDeviceTitle"/>

    <TextView
        android:id="@+id/pedalDeviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pedalDeviceTitle" />




</androidx.constraintlayout.widget.ConstraintLayout>