<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnGoingActivity">

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onGoing"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/bpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/heart"
        app:layout_constraintTop_toBottomOf="@id/titre"
        app:layout_constraintBottom_toTopOf="@id/puissanceMoyenne"/>

    <ImageView
        android:id="@+id/heart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/cardiacbelt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bpm"
        app:layout_constraintBottom_toBottomOf="@id/bpm"/>

    <TextView
        android:id="@+id/temps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startEncouragement"
        android:textSize="40sp"
        android:visibility="invisible"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bpm"/>


    <TextView
        android:id="@+id/puissanceMoyenne"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titre"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/strength"/>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/puissanceMoyenne"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/vitesse"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speedUnity"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map"
        app:layout_constraintBottom_toTopOf="@id/stop"/>

    <ImageButton
        android:id="@+id/stop"
        android:layout_width="44dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/stop" />


</androidx.constraintlayout.widget.ConstraintLayout>