<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">


    <TextView
        android:id="@+id/aboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutUs"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/aboutUsText"/>

    <TextView
        android:id="@+id/aboutUsText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsText"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@id/map"
        app:layout_constraintEnd_toEndOf="@id/map"
        app:layout_constraintStart_toStartOf="@id/map"
        app:layout_constraintTop_toBottomOf="@+id/aboutUs" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:context=".MapsActivity"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/aboutUsText"
        app:layout_constraintBottom_toTopOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backBtn"
        android:textSize="20dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/back"
        android:textColor="@color/black"
        android:theme="@style/Theme.MaterialComponents"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>