<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Log_In">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"        />

    <TextView
        android:id="@+id/welcome_message"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/relative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20sp"/>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_message"
        app:layout_constraintBottom_toTopOf="@id/btnBack">


        <TextView
            android:id="@+id/email"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textSize="25sp" />
        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/email"
            android:layout_alignTop="@id/email"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/password"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textSize="25sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/password"
            android:layout_alignBottom="@id/password"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/forgotPassword"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setPassword"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/resetPassword" />
    </RelativeLayout>





    <com.google.android.material.button.MaterialButton

        android:id="@+id/btnLog"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:textSize="20dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:theme="@style/Theme.MaterialComponents"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toBottomOf="@id/relative"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/btnBack"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:textSize="20dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:theme="@style/Theme.MaterialComponents"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnLog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>