<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/relative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintVertical_bias="0.08">

        <TextView
            android:id="@+id/name"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_name"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/surname"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/surname"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_surname"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/surname"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/surname"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/email"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/surname"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_email"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/email"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/password"
            android:layout_alignBottom="@id/password"
            android:layout_marginStart="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/btn_sign"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:textSize="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:theme="@style/Theme.MaterialComponents"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toBottomOf="@id/relative"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/btn_back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:textSize="20dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:theme="@style/Theme.MaterialComponents"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:layout_constraintVertical_bias="0.26" />
</androidx.constraintlayout.widget.ConstraintLayout>